--- a/agendei.dproj
+++ b/agendei.dproj
@@ -199,6 +199,25 @@
             <Form>FrameCategoria</Form>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="UnitFrameAgendamento.pas">
+            <Form>FrameAgendamento</Form>
+            <FormType>fmx</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="UnitDetalhePrestador.pas">
+            <Form>FrmDetalhePrestador</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
+        <DCCReference Include="UnitFrameServico.pas">
+            <Form>FrameServico</Form>
+            <FormType>fmx</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="UnitAgenda.pas">
+            <Form>FrmAgenda</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
+        <DCCReference Include="3rdParty\uCustomCalendar.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
